🔨💄 Fixed off center issue on homepage

--- a/src/App.scss
+++ b/src/App.scss
@@ -54,7 +54,7 @@ a {
 .Home {
   &__grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(30rem, 1fr));
     grid-template-rows: repeat(auto);
     width: 100%;
     a {
